# soccer-scout

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
app/: config.py  streamlit_app.py
app/.streamlit/: config.toml
app/components/: __init__.py  cards.py  charts.py
app/services/: explainer.py  modal_client.py  openai_client.py
app/views/: scout.py
configs/: tokenizer.yaml
eventgpt/: __init__.py  model.py  tokenizer.py
eventgpt/cases/: _common.py
eventgpt/data/: episodes.py
eventgpt/web/: __init__.py  modal_endpoints.py
eventgpt/web/lib/: __init__.py  archetype.py  players.py  search.py  swap.py  team.py
eventgpt_scouting_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
